--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="views.initialize()">
   <h1>Todo List</h1>
   <div>
-    <button onclick="views.displayTodos()">Display Todos</button>
     <button onclick="handlers.toggleAll()">Toggle All</button>
   </div>
 
